[gd_scene load_steps=3 format=3 uid="uid://cm3xjnasiku4g"]

[ext_resource type="Script" uid="uid://fs2ubjarhinq" path="res://MainMenu.gd" id="1_eiy7p"]
[ext_resource type="Texture2D" uid="uid://0pplnenpcetj" path="res://assets/menu/dirt.png" id="1_i26rj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eiy7p")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_i26rj")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7254902)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 40
text = "TODO Title the game"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="MapSelectContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/MapSelectContainer"]
layout_mode = 2
text = "Map:"

[node name="MapSelectDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/MapSelectContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="FactionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
